--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,8 @@
 .App {
-  text-align: center;
+  margin: 100px auto;
+  max-width: 80vw;
+  border: 1px solid #eee;
+  padding: 40px;
 }
 
 .App-logo {
